--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-    <title>NgCourse-Next Demo Application</title>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+    <title>Counter Application</title>
   </head>
-
-  <body>
+   <body>
     <div>
-      <ngc-main>
-        <main class="container mt4" ui-view></main>
-      </ngc-main>
+      <ngr-counter></ngr-counter>
     </div>
-
   </body>
-
 </html>
