--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Counter Application</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rangle.io - Angular / Redux seed</title>
   </head>
    <body>
     <div>
-      <ngr-counter></ngr-counter>
+      <rio-root></rio-root>
     </div>
   </body>
 </html>
