Update styles to match other starters.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   </head>
    <body>
     <div>
-      <rio-root></rio-root>
+      <rio-sample-app></rio-sample-app>
     </div>
   </body>
 </html>
