--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rangle.io - Angular / Redux seed</title>
+    <title>Rangle.io - Angular / Redux Seed</title>
     <base href="/">
   </head>
    <body>
